--- a/index.html
+++ b/index.html
@@ -4,62 +4,28 @@
   <head>
     <title>CatPhotoApp</title>
     <meta charset="UTF-8">
+    <style media="screen">
+      a{
+        display: flex;
+        flex-direction: column;
+      }
+    </style>
   </head>
   <body>
-    <h1>CatPhotoApp</h1>
-    <main>
-      <section>
-        <h2>Cat Photos</h2>
-        <!-- TODO: Add link to cat photos -->
-        <p>Click here to view more <a target="_blank" href="https://freecatphotoapp.com">cat photos</a>.</p>
-        <a href="https://freecatphotoapp.com"><img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back."></a>
-      </section>
-      <section>
-        <h2>Cat Lists</h2>
-        <h3>Things cats love:</h3>
-        <ul>
-          <li>cat nip</li>
-          <li>laser pointers</li>
-          <li>lasagna</li>
-        </ul>
-        <figure>
-          <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/lasagna.jpg" alt="A slice of lasagna on a plate.">
-          <figcaption>Cats <em>love</em> lasagna.</figcaption>  
-        </figure>
-        <h3>Top 3 things cats hate:</h3>
-        <ol>
-          <li>flea treatment</li>
-          <li>thunder</li>
-          <li>other cats</li>
-        </ol>
-        <figure>
-          <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/cats.jpg" alt="Five cats looking around a field.">
-          <figcaption>Cats <strong>hate</strong> other cats.</figcaption>  
-        </figure>
-      </section>
-      <section>
-        <h2>Cat Form</h2>
-        <form action="https://freecatphotoapp.com/submit-cat-photo">
-          <fieldset>
-            <legend>Is your cat an indoor or outdoor cat?</legend>
-            <label><input id="indoor" type="radio" name="indoor-outdoor" value="indoor" checked> Indoor</label>
-            <label><input id="outdoor" type="radio" name="indoor-outdoor" value="outdoor"> Outdoor</label>
-          </fieldset>
-          <fieldset>
-            <legend>What's your cat's personality?</legend>
-            <input id="loving" type="checkbox" name="personality" value="loving" checked> <label for="loving">Loving</label>
-            <input id="lazy" type="checkbox" name="personality" value="lazy"> <label for="lazy">Lazy</label>
-            <input id="energetic" type="checkbox" name="personality" value="energetic"> <label for="energetic">Energetic</label>
-          </fieldset>
-          <input type="text" name="catphotourl" placeholder="cat photo URL" required>
-          <button type="submit">Submit</button>
-        </form>
-      </section>
-    </main>
-    <footer>
-      <p>
-        No Copyright - <a href="https://www.freecodecamp.org">freeCodeCamp.org</a>
-      </p>
-    </footer>
+    <h1>You can view all projects by clicking on links</h1>
+    <a href="HTML Basics/index.html" target="_blank">HTML Basics</a>
+    <a href="CSS Basics/index.html" target="_blank">CSS Basics</a>
+    <a href="CSS Colors/index.html" target="_blank">CSS Colors</a>
+    <a href="Forms/index.html" target="_blank">Forms</a>
+    <a href="Form Cretificate/index.html" target="_blank">Form Cretificate</a>
+    <a href="Rothko Painting/index.html" target="_blank">Rothko Painting</a>
+    <a href="CSS Flexbox/index.html" target="_blank">CSS Flexbox (change width of screen)</a>
+    <a href="CSS Font/index.html" target="_blank">CSS Font</a>
+    <a href="Accessibility/index.html" target="_blank">Accessibility (tricks with screen reader, for disabled persons)</a>
+    <a href="TributePage/index.html" target="_blank">TributePage</a>
+    <a href="Balance Sheet/index.html" target="_blank">Balance Sheet</a>
+    <a href="Picasso Painting/index.html" target="_blank">Picasso Painting</a>
+    <a href="Technical Documentation Page/index.html" target="_blank">Technical Documentation Page (change width of screen)</a>
+    <a href="CSS Variables/index.html" target="_blank">CSS Variables (change width of screen)</a>
   </body>
 </html>
