--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
         display: flex;
         flex-direction: column;
       }
+      span {
+        text-decoration: none;
+        color: black;
+      }
     </style>
   </head>
   <body>
@@ -19,13 +23,13 @@
     <a href="Forms/index.html" target="_blank">Forms</a>
     <a href="Form Cretificate/index.html" target="_blank">Form Cretificate</a>
     <a href="Rothko Painting/index.html" target="_blank">Rothko Painting</a>
-    <a href="CSS Flexbox/index.html" target="_blank">CSS Flexbox (change width of screen)</a>
+    <a href="CSS Flexbox/index.html" target="_blank">CSS Flexbox <span>(change width of screen)</span></a>
     <a href="CSS Font/index.html" target="_blank">CSS Font</a>
-    <a href="Accessibility/index.html" target="_blank">Accessibility (tricks with screen reader, for disabled persons)</a>
+    <a href="Accessibility/index.html" target="_blank">Accessibility <span>(tricks with screen reader, for disabled persons)</span></a>
     <a href="TributePage/index.html" target="_blank">TributePage</a>
     <a href="Balance Sheet/index.html" target="_blank">Balance Sheet</a>
     <a href="Picasso Painting/index.html" target="_blank">Picasso Painting</a>
-    <a href="Technical Documentation Page/index.html" target="_blank">Technical Documentation Page (change width of screen)</a>
-    <a href="CSS Variables/index.html" target="_blank">CSS Variables (change width of screen)</a>
+    <a href="Technical Documentation Page/index.html" target="_blank">Technical Documentation Page <span>(change width of screen)</span></a>
+    <a href="CSS Variables/index.html" target="_blank">CSS Variables <span>(change width of screen)</span></a>
   </body>
 </html>
