--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
   <head>
-    <title>CatPhotoApp</title>
+    <title>Home Page</title>
     <meta charset="UTF-8">
     <style media="screen">
       a{
