--- a/index.html
+++ b/index.html
@@ -5,31 +5,28 @@
     <title>Home Page</title>
     <meta charset="UTF-8">
     <style media="screen">
-      a{
+      body {
         display: flex;
         flex-direction: column;
-      }
-      span {
-        text-decoration: none;
-        color: black;
+        align-items: center;
       }
     </style>
   </head>
   <body>
     <h1>You can view all projects by clicking on links</h1>
-    <a href="HTML Basics/index.html" target="_blank">HTML Basics</a>
-    <a href="CSS Basics/index.html" target="_blank">CSS Basics</a>
-    <a href="CSS Colors/index.html" target="_blank">CSS Colors</a>
-    <a href="Forms/index.html" target="_blank">Forms</a>
-    <a href="Form Cretificate/index.html" target="_blank">Form Cretificate</a>
-    <a href="Rothko Painting/index.html" target="_blank">Rothko Painting</a>
-    <a href="CSS Flexbox/index.html" target="_blank">CSS Flexbox <span>(change width of screen)</span></a>
-    <a href="CSS Font/index.html" target="_blank">CSS Font</a>
-    <a href="Accessibility/index.html" target="_blank">Accessibility <span>(tricks with screen reader, for disabled persons)</span></a>
-    <a href="TributePage/index.html" target="_blank">TributePage</a>
-    <a href="Balance Sheet/index.html" target="_blank">Balance Sheet</a>
-    <a href="Picasso Painting/index.html" target="_blank">Picasso Painting</a>
-    <a href="Technical Documentation Page/index.html" target="_blank">Technical Documentation Page <span>(change width of screen)</span></a>
-    <a href="CSS Variables/index.html" target="_blank">CSS Variables <span>(change width of screen)</span></a>
+    <p><a href="HTML Basics/index.html" target="_blank">HTML Basics</a></p>
+    <p><a href="CSS Basics/index.html" target="_blank">CSS Basics</a></p>
+    <p><a href="CSS Colors/index.html" target="_blank">CSS Colors</a></p>
+    <p><a href="Forms/index.html" target="_blank">Forms</a></p>
+    <p><a href="Form Cretificate/index.html" target="_blank">Form Cretificate</a></p>
+    <p><a href="Rothko Painting/index.html" target="_blank">Rothko Painting</a></p>
+    <p><a href="CSS Flexbox/index.html" target="_blank">CSS Flexbox</a><span> (change width of screen)</span></p>
+    <p><a href="CSS Font/index.html" target="_blank">CSS Font</a></p>
+    <p><a href="Accessibility/index.html" target="_blank">Accessibility</a><span> (tricks with screen reader, for disabled persons)</span></p>
+    <p><a href="TributePage/index.html" target="_blank">TributePage</a></p>
+    <p><a href="Balance Sheet/index.html" target="_blank">Balance Sheet</a></p>
+    <p><a href="Picasso Painting/index.html" target="_blank">Picasso Painting</a></p>
+    <p><a href="Technical Documentation Page/index.html" target="_blank">Technical Documentation Page</a><span> (change width of screen)</span></p>
+    <p><a href="CSS Variables/index.html" target="_blank">CSS Variables</a><span> (change width of screen)</span></p>
   </body>
 </html>
