--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <p><a href="CSS Basics/index.html" target="_blank">CSS Basics</a></p>
     <p><a href="CSS Colors/index.html" target="_blank">CSS Colors</a></p>
     <p><a href="Forms/index.html" target="_blank">Forms</a></p>
-    <p><a href="Form Cretificate/index.html" target="_blank">Form Cretificate</a></p>
+    <p><a href="FormCertificate/index.html" target="_blank">Form Certificate</a></p>
     <p><a href="Rothko Painting/index.html" target="_blank">Rothko Painting</a></p>
     <p><a href="CSS Flexbox/index.html" target="_blank">CSS Flexbox</a><span> (change width of screen)</span></p>
     <p><a href="CSS Font/index.html" target="_blank">CSS Font</a></p>
