--- a/index.html
+++ b/index.html
@@ -28,5 +28,9 @@
     <p><a href="Picasso Painting/index.html" target="_blank">Picasso Painting</a></p>
     <p><a href="Technical Documentation Page/index.html" target="_blank">Technical Documentation Page</a><span> (change width of screen)</span></p>
     <p><a href="CSS Variables/index.html" target="_blank">CSS Variables</a><span> (change width of screen)</span></p>
+    <p><a href="CSS Grid/index.html" target="_blank">CSS Grid</a></p>
+    <p><a href="Landing Page/index.html" target="_blank">Landing Page</a></p>
+    <p><a href="CSS Animations/index.html" target="_blank">CSS Animations</a></p>
+    <p><a href="CSS Transforms/index.html" target="_blank">CSS Transforms</a></p>
   </body>
 </html>
