--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <title>Home Page</title>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style media="screen">
       body {
         display: flex;
