--- a/index.html
+++ b/index.html
@@ -33,5 +33,6 @@
     <p><a href="Landing Page/index.html" target="_blank">Landing Page</a></p>
     <p><a href="CSS Animations/index.html" target="_blank">CSS Animations</a></p>
     <p><a href="CSS Transforms/index.html" target="_blank">CSS Transforms</a></p>
+    <p><a href="Images/index.html" target="_blank">Images</a></p>
   </body>
 </html>
