--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <p><a href="Landing Page/index.html" target="_blank">Landing Page</a></p>
     <p><a href="CSS Animations/index.html" target="_blank">CSS Animations</a></p>
     <p><a href="CSS Transforms/index.html" target="_blank">CSS Transforms</a></p>
+	<p><a href="Personal Portfolio/index.html" target="_blank">Personal Portfolio</a></p>
     <p><a href="Images/index.html" target="_blank">Images</a></p>
   </body>
 </html>
