--- a/Personal Portfolio/index.html
+++ b/Personal Portfolio/index.html
@@ -4,30 +4,86 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:200i,300,400&amp;display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:700&amp;display=swap" rel="stylesheet">
     <title>Portfolio Webpage</title>
   </head>
   <body>
     <header>
       <nav id="navbar">
-        <a href="#welcome-section">welcome-section</a>
-        <a href="#projects">projects</a>
+        <a class="nav-item" href="#welcome-section">About</a>
+        <a class="nav-item" href="#projects">Work</a>
+        <a class="nav-item" href="#contact">Contact</a>
       </nav>
     </header>
     <main>
       <section id="welcome-section">
-        <h1>Hello! I'm LongRast</h1>
-        <p>a web developer</p>
+        <div class="welcome-text">
+          <h1>Hello! I'm LongRast</h1>
+          <p>a web developer</p>
+        </div>
       </section>
 
       <section id="projects">
-        <h1 class="project-title">These are some of my projects</h1>
-        <a href="https://longrast.github.io/FreeCodeCampProjects/Landing%20Page/index.html">ссылка</a>
+        <div class="projects-section-content">
+          <h2 class="projects-section-header">These are some of my projects</h2>
+        </div>
+        <div class="projects-flex">
+          <div class="project-box">
+            <a href="https://longrast.github.io/FreeCodeCampProjects/FormCertificate/index.html">
+              <img class="project-image" src="https://longrast.github.io/FreeCodeCampProjects/Images/FormCertificate.png" alt="wrong">
+              <p class="project-title"><span class="code">&lt;</span> Form <span class="code">/&gt;</span></p>
+            </a>
+          </div>
+          <div class="project-box">
+            <a href="https://longrast.github.io/FreeCodeCampProjects/TributePage/index.html">
+              <img class="project-image" src="https://longrast.github.io/FreeCodeCampProjects/Images/TributePage.png" alt="wrong">
+              <p class="project-title"><span class="code">&lt;</span> Tribute Page <span class="code">/&gt;</span></p>
+            </a>
+          </div>
+          <div class="project-box">
+            <a href="https://longrast.github.io/FreeCodeCampProjects/Technical%20Documentation%20Page/index.html">
+              <img class="project-image" src="https://longrast.github.io/FreeCodeCampProjects/Images/TechnicalDocumentation.png" alt="wrong">
+              <p class="project-title"><span class="code">&lt;</span> Technical Documentation <span class="code">/&gt;</span></p>
+            </a>
+          </div>
+          <div class="project-box">
+            <a href="https://longrast.github.io/FreeCodeCampProjects/Landing%20Page/index.html">
+              <img class="project-image" src="https://longrast.github.io/FreeCodeCampProjects/Images/LandingPage.png" alt="wrong">
+              <p class="project-title"><span class="code">&lt;</span> Landing Page <span class="code">/&gt;</span></p>
+            </a>
+          </div>
+        </div>
+        <div class="show-all-wrapper">
+        <div class="show-all-box">
+          <a class="show-all-text" href="https://longrast.github.io/FreeCodeCampProjects/">Show all<i class="fas fa-chevron-right"></i></a>
+        </div>
+        </div>
       </section>
-
-
+      <section id="contact">
+        <div class="contact-section-header">
+          <h2>Let's work together...</h2>
+          <p>How do you take your coffee?</p>
+        </div>
+        <div class="contact-links">
+          <a
+          id="link"
+          href="https://github.com/longrast"
+          target="_blank"
+          class="btn contact-details"
+          ><i class="fab fa-github"></i> GitHub</a>
+          <a id="link" href="mailto:longrast.2002@gmail.com" class="btn contact-details"><i class="fas fa-at"></i> Send a mail</a>
+          <a id="link" href="tel:+7-916-227-49-41" class="btn contact-details"
+          ><i class="fas fa-mobile-alt"></i> Call me</a>
+        </div>
+      </section>
     </main>
     <footer>
-      <a id="profile-link" href="https://github.com/longrast" target="_blank">GitHub<a>
+      <div class="footer">
+        <p>© Created for </p>
+        <a href="https://www.freecodecamp.com/" target="_blank"> freeCodeCamp <i class="fab fa-free-code-camp"></i></a>
+      </div>
     </footer>
   </body>
 </html>
